<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LoginActivity"
    android:orientation="vertical"
    android:background="#fff"
    android:padding="20dp">

    <ImageView
        android:contentDescription="@string/home_picture"
        android:id="@+id/logo_image"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:src="@drawable/ic_logo"/>

    <TextView
        android:id="@+id/logo_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/bungee"
        android:text="@string/zodiak_weton"
        android:textColor="#000"
        android:textSize="30sp" />

    <TextView
        android:id="@+id/slogan_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/coretan_code"
        android:textSize="18sp"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="20dp"
        android:orientation="vertical">

        <EditText
            android:id="@+id/naLog"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:hint="@string/nama_lengkap"
            android:autofillHints="Nama Lengkap"
            android:inputType="text" />

        <EditText
            android:id="@+id/daLog"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:hint="@string/_01_11_2002"
            android:inputType="text"
            android:autofillHints="01-11-2002" />

        <Button
            android:id="@+id/btnHasil"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/lihat_hasil"
            android:background="#000"
            android:textColor="#fff"
            android:layout_marginBottom="5dp"/>

    </LinearLayout>

</LinearLayout>